# MCP-Github-Deployment

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/task_mcp_server/: __init__.py  server.py
