[project]
name = "task-mcp-server"
version = "0.1.0"
description = "A simple task management MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
[project.scripts]
task-mcp-server = "task_mcp_server.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/task_mcp_server"]